--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ body {
     margin-top: -560px;
     color: #fff;
     text-shadow: 2px 2px 10px #BD89FF, -2px 2px 10px #BD89FF, 2px -2px 10px #BD89FF, -2px -2px 10px #BD89FF;
-    background-image: url(./images/12h1_banner.png);
+    background-image: url(../images/12h1_banner.png);
     background-repeat: no-repeat;
     width: 1132px;
     height: 358px;
