--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,7 @@ body {
 /* ↑コピペボックスここまで */
 
 .cP01area {
-    background-image: url(./images/22green_banner02.png);
+    background-image: url(../images/22green_banner02.png);
     height: 530px;
     margin-top: 70px;
     height: 530px;
@@ -450,7 +450,7 @@ body {
 }
 
 .cP02area {
-    background-image: url(./images/26purple_banner02.png);
+    background-image: url(../images/26purple_banner02.png);
     height: 451px;
     margin-top: 45px;
     width: 1040px;
@@ -555,7 +555,7 @@ body {
 /* ↑コピペボックス02ここまで */
 
 .cP03area {
-    background-image: url(./images/29green_banner02.png);
+    background-image: url(../images/29green_banner02.png);
     height: 530px;
     margin-top: 68px;
     width: 1040px;
@@ -620,7 +620,7 @@ body {
 }
 
 .tOukou04 {
-    background-image: url(./images/35pink_banner\ 1.png);
+    background-image: url(../images/35pink_banner\ 1.png);
     height: 280px;
     width: 750px;
     margin-top: 100px;
@@ -845,7 +845,7 @@ body {
     .mAincatch {
         width: 100%;
         font-size: 18px;
-        background-image: url(./images/12h1_banner.png);
+        background-image: url(../images/12h1_banner.png);
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
@@ -1019,7 +1019,7 @@ body {
 
     .cP01area {
         width: 100%;
-        background-image: url(./images/22green_banner02.png);
+        background-image: url(../images/22green_banner02.png);
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -1078,7 +1078,7 @@ body {
 
     .cP02area {
         width: 100%;
-        background-image: url(./images/26purple_banner02.png);
+        background-image: url(../images/26purple_banner02.png);
         background-repeat: no-repeat;
         background-position: center;
         margin-top: 300px;
@@ -1127,7 +1127,7 @@ body {
 
     .cP03area {
         width: 100%;
-        background-image: url(./images/29green_banner02.png);
+        background-image: url(../images/29green_banner02.png);
         background-repeat: no-repeat;
         background-position: center;
     }
